create github pages

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Creator</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Builder</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
     <div>
         <div>
             <div>
@@ -354,6 +354,125 @@
 
         </div>
     </div>
+</section>
+
+<section class="mbr-section mbr-section__container article" id="header3-i" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="mbr-section-title display-2">Advantage of our Showroom</h3>
+                <small class="mbr-section-subtitle"></small>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section mbr-parallax-background" id="content5-h" style="background-image: url(assets/images/guaranteed-price-btn-tinified.png); padding-top: 40px; padding-bottom: 0px;">
+
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
+    </div>
+
+    <div class="container">
+        <h3 class="mbr-section-title display-2">Lowest Price</h3>
+        <div class="lead"><p>Since we are the manufacturer of brass vessels, we offer our products at very very lowest price in the market</p></div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-parallax-background" id="content5-j" style="background-image: url(assets/images/premium-satisfaction-guarantee-label-quality-customer.jpg); padding-top: 40px; padding-bottom: 0px;">
+
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
+    </div>
+
+    <div class="container">
+        <h3 class="mbr-section-title display-2">Quality Ensured</h3>
+        <div class="lead"><p>The products we offer in our store are manufactured with lot of care and with superior quality which will last for yeras without any faults</p></div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-parallax-background" id="content5-k" style="background-image: url(assets/images/delivery-web-824x549.jpg); padding-top: 80px; padding-bottom: 0px;">
+
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
+    </div>
+
+    <div class="container">
+        <h3 class="mbr-section-title display-2">Speedy Delivery</h3>
+        <div class="lead"><p>Bulk orders given in our store will be delivered so fast within the due date mentioned in your order receipt without any time delay or damages</p></div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-parallax-background" id="content5-l" style="background-image: url(assets/images/yourstory-service-msme.jpg); padding-top: 40px; padding-bottom: 0px;">
+
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
+    </div>
+
+    <div class="container">
+        <h3 class="mbr-section-title display-2">Service</h3>
+        <div class="lead"><p>Mostly products we offer in our store will be free from damages. If there is any damages on rare cases like leakages (may be due to dropping or mishandling) will be serviced quickly at free of cost for a stipulated period from the date of purchase on showing the valid purchase receipt. ELECTRONIC ITEMS like Fridge, Television, Wet Grinder, Iron Box, Induction Stove, Mixer Grinder also be serviced for free if it comes under the warranty period</p></div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-parallax-background" id="content5-m" style="background-image: url(assets/images/shutterstock.jpg); padding-top: 40px; padding-bottom: 0px;">
+
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
+    </div>
+
+    <div class="container">
+        <h3 class="mbr-section-title display-2">Satisfaction</h3>
+        <div class="lead"><p>One of the most important feature of our store. Friendly customer service before and after buying. Earning Customer's love and Fulfilling their Satisfaction is our motto</p></div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-parallax-background" id="content5-n" style="background-image: url(assets/images/154141152.jpg); padding-top: 40px; padding-bottom: 0px;">
+
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
+    </div>
+
+    <div class="container">
+        <h3 class="mbr-section-title display-2">Value for you money</h3>
+        <div class="lead"><p>We know there's a lot of sufferings and hardwork lies behind each and every single rupee you're paying us. We make sure that, the precious money you pay won't be wasted at any cause by selling worthless products</p></div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-parallax-background" id="content5-o" style="background-image: url(assets/images/fdb8efd381b916e856854b8577247e45.jpg); padding-top: 80px; padding-bottom: 0px;">
+
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
+    </div>
+
+    <div class="container">
+        <h3 class="mbr-section-title display-2">Old is Gold</h3>
+        <div class="lead"><p>Nothing is waste in this world. You can exchange your old brass, steel, copper, aluminium vessels or scrap at higher rates and you can buy new products. You can also exchange your old and used appliances under attractive exchange offers</p></div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-parallax-background" id="content5-p" style="background-image: url(assets/images/gifts1.jpg); padding-top: 80px; padding-bottom: 0px;">
+
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
+    </div>
+
+    <div class="container">
+        <h3 class="mbr-section-title display-2">Memorable Gifts</h3>
+        <div class="lead"><p>Lot of offers and discounts in price will be announced in store for bulk purchases and for marriage purchases. Special gifts will be given for marriage purchases</p></div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-parallax-background" id="content5-q" style="background-image: url(assets/images/swipe-3095273f.jpg); padding-top: 80px; padding-bottom: 0px;">
+
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
+    </div>
+
+    <div class="container">
+        <h3 class="mbr-section-title display-2">Digital Payment</h3>
+        <div class="lead"><p>The world is moving to digital transaction which has many advantages in it. We accept all major Credit Cards which includes service charges</p></div>
+    </div>
+
 </section>
 
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-2" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
