--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">WELCOME TO OUR SITE</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#header2-2">A SHORT INTRO</a><a class="dropdown-item" href="index.html#header6-3">MORE ABOUT US</a></div></li><li class="nav-item dropdown"><a class="nav-link link" href="OurShowroom.html" aria-expanded="false">OUR SHOWROOM DETAILS</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger-outline btn-danger" href="#top">HOME</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">WELCOME TO OUR SITE</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#header2-2">A SHORT INTRO</a><a class="dropdown-item" href="index.html#header6-3">MORE ABOUT US</a></div></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#header3-e" aria-expanded="false">PRODUCTS</a></li><li class="nav-item"><a class="nav-link link" href="index.html#header3-i" aria-expanded="false">ADVANTAGES OF OUR SHOWROOM</a></li><li class="nav-item"><a class="nav-link link" href="OurShowroom.html" aria-expanded="false">OUR SHOWROOM DETAILS</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger-outline btn-danger" href="#top">HOME</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Builder</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Builder</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
     <div>
         <div>
             <div>
@@ -330,7 +330,7 @@
     </div>
 </section>
 
-<section class="mbr-info mbr-info-extra mbr-section mbr-section-md-padding" id="msg-box1-g" style="background-color: rgb(242, 242, 242); padding-top: 90px; padding-bottom: 90px;">
+<section class="mbr-info mbr-info-extra mbr-section mbr-section-md-padding" id="msg-box1-g" style="background-color: rgb(192, 163, 117); padding-top: 90px; padding-bottom: 90px;">
 
     
     <div class="container">
@@ -347,7 +347,7 @@
                 </div>
 
                 <div class="mbr-table-cell col-md-4">
-                    <div class="text-xs-center"><a class="btn btn-primary" href="http://srivadivelanstores.co.nr/products" target="_blank">CLICK HERE</a></div>
+                    <div class="text-xs-center"><a class="btn btn-danger" href="http://srivadivelanstores.co.nr/products" target="_blank">CLICK HERE</a></div>
                 </div>
             </div>
 
