create github pages

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Builder</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
     <div>
         <div>
             <div>
@@ -473,6 +473,32 @@
         <div class="lead"><p>The world is moving to digital transaction which has many advantages in it. We accept all major Credit Cards which includes service charges</p></div>
     </div>
 
+</section>
+
+<section class="mbr-info mbr-info-extra mbr-section mbr-section-md-padding" id="msg-box1-r" style="background-color: rgb(242, 242, 242); padding-top: 0px; padding-bottom: 0px;">
+
+    
+    <div class="container">
+        <div class="row">
+
+
+            
+
+
+            <div class="mbr-table-md-up">
+                <div class="mbr-table-cell mbr-right-padding-md-up col-md-8 text-xs-center text-md-left">
+                    <h2 class="mbr-info-subtitle mbr-section-subtitle">Terms and Conditions Applied</h2>
+                    <h3 class="mbr-info-title mbr-section-title display-2"></h3>
+                </div>
+
+                <div class="mbr-table-cell col-md-4">
+                    <div class="text-xs-center"><a class="btn btn-primary" href="https://mobirise.com">CLICK HERE</a></div>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
 </section>
 
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-2" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
