--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
     <div>
         <div>
             <div>
@@ -510,7 +510,7 @@
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">SPECIAL OFFERS</h3>
                 <div class="lead"><p>Sri Vadivelan Stores announce special offers often. Please be in touch with us and do not miss those attractive offers. To know our latest offers/schems</p></div>
-                <div><a class="btn btn-secondary" href="http://http://srivadivelanstores.blogspot.in/" target="_blank">CLICK HERE</a></div>
+                <div><a class="btn btn-secondary" href="http://srivadivelanstores.blogspot.in/" target="_blank">CLICK HERE</a></div>
             </div>
         </div>
     </div>
