--- a/OurShowroom.html
+++ b/OurShowroom.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-section mbr-after-navbar" id="msg-box6-4" data-bg-video="https://www.youtube.com/watch?v=uNCr7NdOJgw" style="padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Maker</a></section><section class="mbr-section mbr-after-navbar" id="msg-box6-4" data-bg-video="https://www.youtube.com/watch?v=uNCr7NdOJgw" style="padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -114,7 +114,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header6-6" style="background-image: url(assets/images/room-laptop2.jpg);">
+<section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header6-6" style="background-image: url(assets/images/room-laptop.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(204, 204, 204);">
     </div>
