create github pages

--- a/OurShowroom.html
+++ b/OurShowroom.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">DIRECTIONS</a><div class="dropdown-menu"><a class="dropdown-item" href="OurShowroom.html#msg-box6-4">PICTORIAL DIRECTIONS</a><a class="dropdown-item" href="OurShowroom.html#header5-5">DIRECTIONS BY TEXT</a><a class="dropdown-item" href="OurShowroom.html#header6-6">DIRECTIONS BY VIDEO</a></div></li><li class="nav-item"><a class="nav-link link" href="OurShowroom.html#header3-8">EXPLORE</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="index.html">HOME</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary" href="index.html">HELP</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">DIRECTIONS</a><div class="dropdown-menu"><a class="dropdown-item" href="OurShowroom.html#msg-box6-4">PICTORIAL DIRECTIONS</a><a class="dropdown-item" href="OurShowroom.html#header5-5">DIRECTIONS BY TEXT</a><a class="dropdown-item" href="OurShowroom.html#header6-6">DIRECTIONS BY VIDEO</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="OurShowroom.html#header3-8">EXPLORE</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-after-navbar" id="msg-box6-4" data-bg-video="https://www.youtube.com/watch?v=uNCr7NdOJgw" style="padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Generator</a></section><section class="mbr-section mbr-after-navbar" id="msg-box6-4" data-bg-video="https://www.youtube.com/watch?v=uNCr7NdOJgw" style="padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -169,7 +169,7 @@
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
-        <p class="text-xs-center">Copyright (c) 2017Sri Vadivelan Stores</p>
+        <p class="text-xs-center">PLEASE CLOSE THIS TAB/WINDOW AFTER GOING THROUGH<br>Copyright (c) 2017Sri Vadivelan Stores</p>
     </div>
 </footer>
 
