--- a/Terms&Conditions.html
+++ b/Terms&Conditions.html
@@ -156,7 +156,7 @@
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-t" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
-        <p class="text-xs-center">Copyright (c) 2017Sri Vadivelan Stores</p>
+        <p class="text-xs-center">PLEASE CLOSE THIS TAB/WINDOW AFTER GOING THROUGH<br>Copyright (c) 2017Sri Vadivelan Stores</p>
     </div>
 </footer>
 
