--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Builder</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Generator</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
     <div>
         <div>
             <div>
@@ -839,7 +839,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="WPEzKhWBmrX82qIKdEC9b6aeXqxpGISjJncsht+Ydy/fIH9SRpPwyot/T4tuJafThtpyfiDLT3yltRvXsenR3tBNwZrxIJFl3vbV105UDzObBWkWzQ/YXp3WYX9unEXh" data-form-email="true">
+                    <input type="hidden" value="xzybPVx76gVXpA1sadrn5gQAaNQkiarobd9DxJM8jyJQhC4BSQzw3/8FYuBQGLk8abWG/ToiOsG3qc9ycsEokXvUSn47GJFE6HS1yoZWVsekICSvJpaVoAVVXUH/xA3s" data-form-email="true">
 
                     
 
@@ -878,7 +878,7 @@
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-2" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
-        <p class="text-xs-center">Copyright (c) 2017Sri Vadivelan Stores</p>
+        <p class="text-xs-center">PLEASE CLOSE THIS TAB/WINDOW AFTER GOING THROUGH<br>Copyright (c) 2017Sri Vadivelan Stores</p>
     </div>
 </footer>
 
