create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Maker</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
     <div>
         <div>
             <div>
@@ -696,7 +696,7 @@
                 </div>
 
                 <div class="mbr-table-cell col-md-4">
-                    <div class="text-xs-center"><a class="btn btn-primary" href="Terms&amp;Conditions.html" target="_blank">CLICK HERE</a></div>
+                    <div class="text-xs-center"><a class="btn btn-primary" href="http://srivadivelanstorestermsandcondtns.tk" target="_blank">CLICK HERE</a></div>
                 </div>
             </div>
 
@@ -839,7 +839,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="1rWIcl9ev5Qw9DuknSH7u4apjoG8aGm05WTLAlBWN6y6hUP3oI/tZVUJZSCLwLZ0qrPxgfoHqqOnrqB6bLyrdSjnR0ihYVBHHz6POWGAr843lk802y4HDb3LQIAE3kD1" data-form-email="true">
+                    <input type="hidden" value="3jvEWNqnmg7sS8pdep3dTGtFHDYCKaOrZ3wz1K715tZANz1e/pCDH6ZWbxm6bDoOGEzdlufEmfp2IDESNswHMjlfkTp5ctGrqtmCQrSTi7qs9VjM/Lw7nn0VBky1p14o" data-form-email="true">
 
                     
 
